[project]
name = "lifecontingentrisk"
version = "0.1.0"
description = "lifecontingentrisk is a Python implementation of Actuarial Mathematics for Life Contigent Risk."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chebpy",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "plotnine>=0.15.3",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[tool.uv.sources]
chebpy = { git = "https://github.com/chebpy/chebpy.git" }
